# enterprise-vision-ai

./: .dockerignore  .flake8  .gitignore  AGENTS.md  ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SPEC.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt  utils.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy-hf.yml  release.yml
.kilocode/rules-architect/: AGENTS.md
.kilocode/rules-ask/: AGENTS.md
.kilocode/rules-code/: AGENTS.md
.kilocode/rules-debug/: AGENTS.md
api/: __init__.py  dependencies.py  main.py
api/routes/: __init__.py  inference.py  upload.py
api/schemas/: __init__.py  request.py  response.py
clients/: __init__.py  huggingface_client.py  yolo_client.py
docs/superpowers/plans/: 2026-03-12-fastapi-fix-and-run.md  2026-03-12-v1-ci-green.md  2026-03-13-docker-optimize.md  2026-03-13-streamlit-gradio-rebuild.md
docs/superpowers/specs/: 2026-03-12-v1-spec-compliance-design.md  2026-03-13-streamlit-gradio-redesign.md
huggingface_space/: README.md  app.py  hardware.yaml  requirements.txt
notebooks/: 01_model_usage.ipynb  02_dataset_analysis.ipynb  03_huggingface_integration.ipynb  04_training_example.ipynb  05_sam_segmentation.ipynb  06_detr_yolos_detection.ipynb  07_model_comparison.ipynb  08_industrial_applications.ipynb
pages/: 01_Defekt_Tespiti.py  02_Cevher_On_Secimi.py  __init__.py  _sidebar.py  defect.py  ore.py
services/: __init__.py  inference_service.py  model_service.py  preprocessing.py  utils.py
src/bas_ai/: __init__.py
src/enterprise_vision_ai/: __init__.py
src/enterprise_vision_ai/api/: __init__.py  dependencies.py  main.py
src/enterprise_vision_ai/api/routes/: __init__.py  datasets.py  health.py  inference.py  models.py  upload.py
src/enterprise_vision_ai/api/schemas/: __init__.py  response.py
src/enterprise_vision_ai/clients/: __init__.py  yolo_client.py
src/enterprise_vision_ai/core/: __init__.py  inference_engine.py  model_loader.py  postprocessor.py  preprocessor.py
src/enterprise_vision_ai/datasets/: __init__.py  data_loader.py
src/enterprise_vision_ai/models/: __init__.py  base.py  defect_detector.py  model_manager.py  ore_classifier.py  yolo_adapter.py
src/enterprise_vision_ai/services/: __init__.py  inference_service.py  model_service.py
src/enterprise_vision_ai/utils/: __init__.py  image_utils.py  io_utils.py  metrics.py  visualization.py
tests/: conftest.py  test_app_page.py  test_backward_compat.py  test_datasets.py  test_defect_page.py  test_models.py  test_ore_page.py  test_utils.py
